--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/FocusList/_ShareScript.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/FocusList/_ShareScript.cshtml
@@ -2,7 +2,9 @@
 @using Foundation.Wealth.Helper
 @using Feature.Wealth.Component.Models.Invest
 @using Sitecore.Configuration
-
+@{
+    var fcbLevel = Settings.GetSetting("FcbLevel");
+}
 <script>
     (function ($, window, document, undefined) {
         document.addEventListener('DOMContentLoaded', function () {
@@ -71,6 +73,10 @@
                             $('[eh-tracklist-info]', '#fundTable').interactive();
                             $('[eh-tracklist-focus]', '#fundTable').off('click.interactive');
                             $('[eh-tracklist-info]', '#fundTable').off('click.interactive');
+                            let level = '@fcbLevel';
+                            if (level !== "2") {
+                                $('[data-fcblevel]').addClass('u-hidden');
+                            }
                         }
                     },
                     order: {
@@ -267,6 +273,10 @@
                             $('[eh-tracklist-info]', '#etfTable').interactive();
                             $('[eh-tracklist-focus]', '#etfTable').off('click.interactive');
                             $('[eh-tracklist-info]', '#etfTable').off('click.interactive');
+                            let level = '@fcbLevel';
+                            if (level !== "2") {
+                                $('[data-fcblevel]').addClass('u-hidden');
+                            }
                         }
                     },
                     order: {
@@ -464,6 +474,11 @@
                             $('[eh-tracklist-info]', '#foreignStockTable').interactive();
                             $('[eh-tracklist-focus]', '#foreignStockTable').off('click.interactive');
                             $('[eh-tracklist-info]', '#foreignStockTable').off('click.interactive');
+
+                            let level = '@fcbLevel';
+                            if (level !== "2") {
+                                $('[data-fcblevel]').addClass('u-hidden');
+                            }
                         }
                     },
                     order: {
@@ -842,6 +857,15 @@
                 });
             })
             // #endregion 共用
+            //第二階段tab hide
+            let level = '@fcbLevel';
+            if (level !== "2") {
+                $('.c-tab__navs').first().children().each(function (index) {
+                    if (index > 0) {
+                        $(this).addClass('u-hidden');
+                    }
+                });
+            }
         });
     })(jQuery, window, document);
 </script>
