--- a/src/Feature/Component/platform/Views/Feature/Wealth/Component/HeaderWidget/_LoginState.cshtml
+++ b/src/Feature/Component/platform/Views/Feature/Wealth/Component/HeaderWidget/_LoginState.cshtml
@@ -6,9 +6,34 @@
 @{
     var logoutUrl = ClientRoute.GenerateUrl(this, "Accounts", "Logout");
     var member = FcbMemberHelper.GetMemberAllInfo();
+    var fcbLevel = Settings.GetSetting("FcbLevel");
 }
 <div class="l-header__tools">
     <div class="l-topbar">
+        <!-- 登入狀態 -->
+        @if (fcbLevel == "2")
+        {
+            <div class="l-topbar__list">
+                <div class="l-topbar__item">
+                    <a href="#" class="o-topBtn o-topBtn--notify u-hidden" data-popover="#popoverNotify"></a>
+                    <div id="popoverNotify" class="c-popover">
+                        <div class="c-popover__wrap">
+                            <nav class="c-popover__content">
+                                <div class="l-flex u-flex-col">
+                                    <div class="l-flex__item">
+                                        <ul class="c-listGroup" id="topInfoList">
+                                        </ul>
+                                    </div>
+                                    <div class="l-flex__item u-center">
+                                        <a href="@MemberRelatedLinkHelper.GetInfoListUrl()" class="o-link">更多通知</a>
+                                    </div>
+                                </div>
+                            </nav>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        }
         <div class="l-topbar__login">
             <!--登入狀態 電腦版-->
             <a href="#" class="o-topBtn o-topBtn--login" data-popover="#popoverMember">
@@ -31,11 +56,126 @@
                                     <img src="~/themes/images/icons/green/corner-right.svg" class="o-itemLink__icon" alt="">
                                 </a>
                             </li>
+                            @if (fcbLevel == "2")
+                            {
+                                <li class="c-listGroup__item">
+                                    <a href="@MemberRelatedLinkHelper.GetExclusiveRecommendationUrl()" class="o-itemLink">
+                                        <span class="o-itemLink__title t-bold">專屬推薦</span>
+                                        <img src="~/themes/images/icons/green/corner-right.svg" class="o-itemLink__icon" alt="">
+                                    </a>
+                                </li>
+                                <li class="c-listGroup__item">
+                                    <a href="@MemberRelatedLinkHelper.GetFinancialManagementTrialUrl()" class="o-itemLink">
+                                        <span class="o-itemLink__title t-bold">理財試算</span>
+                                        <img src="~/themes/images/icons/green/corner-right.svg" class="o-itemLink__icon" alt="">
+                                    </a>
+                                </li>
+                                <li class="c-listGroup__item">
+                                    <a href="@MemberRelatedLinkHelper.GetFavoriteNewsUrl()" class="o-itemLink">
+                                        <span class="o-itemLink__title t-bold">收藏新聞</span>
+                                        <img src="~/themes/images/icons/green/corner-right.svg" class="o-itemLink__icon" alt="">
+                                    </a>
+                                </li>
+                                <li class="c-listGroup__item">
+                                    <a href="@MemberRelatedLinkHelper.GetRemoteFinancialConsultingUrl()" class="o-itemLink">
+                                        <span class="o-itemLink__title t-bold">遠距理財諮詢</span>
+                                        <img src="~/themes/images/icons/green/corner-right.svg" class="o-itemLink__icon" alt="">
+                                    </a>
+                                </li>
+                            }
                         </ul>
                     </nav>
+                    @if (fcbLevel == "2")
+                    {
+                        <div class="c-popover__footer">
+                            <a href="@MemberRelatedLinkHelper.GetReserveConsultingUrl()" class="o-btn o-btn--primary o-btn--sm o-btn--flat">預約諮詢</a>
+                        </div>
+                    }
                 </div>
             </div>
         </div>
     </div>
 </div>
+
+<script>
+    (function ($, window, document, undefined) {
+        document.addEventListener('DOMContentLoaded', function () {
+            if (!jQuery) {
+                return;
+            }
+            function ConvertSqlDateTimeToJsDateTime(sqlDateTime) {
+                let dataTimearray = sqlDateTime.split('T'); //ex ['2024-06-17','19:27:10.297']
+                let dateStr = dataTimearray[0].replaceAll('-', '/');
+                let timeArry = dataTimearray[1].split(':');
+                let timeStr = timeArry[0] + ":" + timeArry[1];
+                return dateStr + " " + timeStr;
+            }
+            window.ResetTopInfoList = function(){
+                $.ajax({
+                    url: '@ClientRoute.GenerateUrl(this, "MemberInfoList", "GetTopFiveInfoByMember")',
+                    type: 'POST'
+                }).done(function (data, textStatus, jqXHR) {
+                    if (data && data.length > 0) {
+                        let html = "";
+                        let isRead = "";
+                        for (var i = 0; i < data.length; i++) {
+                            isRead = data[i].HaveRead ? "" : "is-hint";
+                            html += `<li class="c-listGroup__item" data-topInfoList>
+                                            <div class="c-itemNotify ${isRead}" data-haveread=${data[i].HaveRead}  data-recordnum="${data[i].RecordNumber}">
+                                                <div class="c-itemNotify__topbar">
+                                                    <span class="t-date">${data[i].InfoDateTimeString}</span>
+                                                    <span class="o-hangTag" data-mailType>${data[i].MailInfoType}</span>
+                                                </div>
+                                                <div class="c-itemNotify__link">
+                                                    <a href="${data[i].InfoLink}" class="o-itemLink">
+                                                        <span class="o-itemLink__title">${data[i].InfoContent}</span>
+                                                        <img src="/themes/images/icons/green/corner-right.svg" class="o-itemLink__icon" alt="">
+                                                    </a>
+                                                </div>
+                                            </div>
+                                        </li>`
+                        }
+                        $('#topInfoList').html(DOMPurify.sanitize(html));
+                        if ($('[data-haveread=true]', $('[data-popover="#popoverNotify"]')).length > 0) {
+                            $('[data-popover="#popoverNotify"]').addClass('is-notify');
+                        }
+                        $('[data-popover="#popoverNotify"]').removeClass('u-hidden');
+                    } else {
+                        $('[data-popover="#popoverNotify"]').addClass('u-hidden');
+                    }
+
+                }).fail(function (jqXHR, textStatus, errorThrown) {
+                    $('[data-popover="#popoverNotify"]').addClass('u-hidden');
+                });
+            }
+            window.ResetTopInfoList();
+            $('#topInfoList').on('click','[data-topInfoList]', function () {
+                console.log($(this))
+            let $this = $(this);
+            let isRead = $this.find('[data-haveread]').data('haveread');
+            if (isRead) {
+                return;
+            }
+             $.ajax({
+                url: '@ClientRoute.GenerateUrl(this, "MemberInfoList", "SetInfoHaveReadByMember")',
+                 type: 'POST',
+                 data: { "mailInfoType": $this.find('[data-mailType]').text(), "recordNumber": $this.find('[data-recordnum]').data('recordnum') },
+                 beforeSend: function () { window.loading('show'); },
+                 success : function(data, textStatus, jqXHR) {
+                     if (data && data.success) {
+                         window.ResetTopInfoList();
+                         if ($('#uid-fjs-infoList').length > 0) {
+                             window.ResetMailInfoTable();
+                         }
+                            window.loading('hide');
+                       }
+                 },
+                 error: function (jqXHR, textStatus, errorThrown) { },
+                 complete: function () { $('.c-loading').loading('hide'); }
+             });
+        });
+
+        });
+    })(jQuery, window, document);
+</script>
 
